--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -329,3 +329,23 @@ test-suite TCEncodeTests
         , unliftio
         , hspec
         , sorted-list
+
+test-suite TMExtractonTest
+    type: exitcode-stdio-1.0
+    main-is: TMExtractonTest.hs
+    default-language: Haskell2010
+
+    hs-source-dirs: src/test
+    ghc-options: -Wall -O
+
+    build-depends:
+        esa-space-protocols -any,
+        esa-base,
+        base -any,
+        bytestring -any,
+        hedgehog -any,
+        inline-c -any,
+        attoparsec -any,
+        text -any,
+        mtl -any,
+        vector -any
