--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -330,9 +330,9 @@ test-suite TCEncodeTests
         , hspec
         , sorted-list
 
-test-suite TMExtractonTest
+test-suite TMExtractionTest
     type: exitcode-stdio-1.0
-    main-is: TMExtractonTest.hs
+    main-is: TMExtractionTest.hs
     default-language: Haskell2010
 
     hs-source-dirs: src/test
@@ -348,4 +348,8 @@ test-suite TMExtractonTest
         attoparsec -any,
         text -any,
         mtl -any,
-        vector -any
+        vector -any,
+        hspec -any,
+        conduit -any,
+        rio -any,
+        lens -any
