--- a/esa-space-protocols.cabal
+++ b/esa-space-protocols.cabal
@@ -126,13 +126,19 @@ library
         , streaming-commons
 
     if flag(llvm)
-        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields -fllvm
+        -- ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        --              -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+        --              -funbox-strict-fields -fllvm
     else
-        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields
+        -- ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        --              -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+        --              -funbox-strict-fields
 
 executable WriteConfig
     main-is: WriteConfig.hs
