--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,8 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-14.04
+resolver: lts-14.4
+
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
@@ -63,3 +64,6 @@ packages:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+nix:
+    enable: true
+    packages: [zlib, gmp]
