--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -69,6 +69,7 @@ library
         Data.PUS.ExtractedDU
         Data.PUS.MissionSpecific.Definitions
         Data.PUS.Value
+        Data.PUS.NcduToTMFrame
         Protocol.SizeOf
         Protocol.NCTRS
         Protocol.EDEN
@@ -359,3 +360,23 @@ test-suite TMExtractionTest
         conduit -any,
         rio -any,
         lens -any
+
+
+executable TMSimulatorTest
+    main-is: TMSimulatorTest.hs
+    default-language: Haskell2010
+    hs-source-dirs: src/test
+    if flag(llvm)
+        ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
+    else
+        ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
+    build-depends:
+        esa-space-protocols
+        , esa-base
+        , base
+        , bytestring
+        , conduit
+        , conduit-extra
+        , rio
+        , text
+        , unliftio
