--- a/package.yaml
+++ b/package.yaml
@@ -21,8 +21,14 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- mtl
+- random
+- rio
 - selda
 - selda-sqlite
+- stm
+- text
+- time
 
 library:
   source-dirs: src
