--- a/esa-db.cabal
+++ b/esa-db.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1033f7698aa946107b528341e290b04f1c52d4b772846d8ee167bf94b7f2de19
+-- hash: cd4f0b7fcd7e52f62d229f4748fbbc137e7da100dd09019f8b2f31ee9ecbd0ef
 
 name:           esa-db
 version:        0.1.0.0
@@ -35,6 +35,7 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , directory
     , mtl
     , random
     , rio
@@ -54,6 +55,7 @@ executable esa-db-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , directory
     , esa-db
     , mtl
     , random
@@ -75,6 +77,7 @@ test-suite esa-db-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , directory
     , esa-db
     , mtl
     , random
