Added esa-db dependency and changed test CommandingTest to test the db logger instead of using the simulator.

--- a/esa-space-protocols/stack.yaml
+++ b/esa-space-protocols/stack.yaml
@@ -50,6 +50,8 @@ extra-deps:
 - attoparsec-time-1
 - bytestring-to-vector-0.3.0.1
 - hw-prim-bits-0.1.0.4
+- github: oswald2/esa-db
+  commit: master
 
 
 # Override default flag values for local packages and extra-deps
