--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -285,6 +285,7 @@ executable CommandingTest
     build-depends:
         esa-space-protocols
         , esa-base
+        , esa-db
         , base
         , bytestring
         , conduit
