First data structures for TM model, moved Time to esa-base

--- a/stack.yaml
+++ b/stack.yaml
@@ -32,6 +32,7 @@ packages:
 - esa-base
 - esa-mib
 - esa-space-protocols
+- esa-tm-model
 - mcs-interface
 
 # Dependency packages to be pulled from upstream that are not in the resolver.
