--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -53,6 +53,7 @@ library
   -- Modules exported by the library.
   exposed-modules:
     General.Types 
+    General.Time
     General.Chunks 
     General.Hexdump 
     General.Padding 
