--- a/esa-tm-model/esa-tm-model.cabal
+++ b/esa-tm-model/esa-tm-model.cabal
@@ -49,10 +49,17 @@ category:            Data
 -- README.
 extra-source-files:  CHANGELOG.md
 
+flag llvm
+    description:
+        build library with llvm
+    default: False
 
 library
   -- Modules exported by the library.
-  -- exposed-modules:
+  exposed-modules:
+    Data.TM.Value
+    Data.TM.Parameter
+    Data.TM.Calibration
 
   -- Modules included in this library but not exported.
   -- other-modules:
@@ -61,7 +68,8 @@ library
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base ^>=4.12.0.0
+  build-depends:       base ^>=4.12.0.0,
+    esa-base
 
   -- Directories containing source files.
   hs-source-dirs:      src
@@ -69,3 +77,17 @@ library
   -- Base language which the package is written in.
   default-language:    Haskell2010
 
+  if flag(llvm)   
+        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields -fllvm
+        -- ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        --              -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+        --              -funbox-strict-fields -fllvm
+    else
+        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields
+        -- ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        --              -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+        --              -funbox-strict-fields
