First try, not working

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -123,6 +123,7 @@ library
         , sorted-list
         , deepseq
         , esa-base
+        , esa-tm-model
         , network
         , streaming-commons
 
