--- a/esa-space-protocols/stack.yaml
+++ b/esa-space-protocols/stack.yaml
@@ -40,6 +40,7 @@ packages:
 - .
 - ../esa-base
 - ../esa-mib
+- ../esa-tm-model
 
 
 # Dependency packages to be pulled from upstream that are not in the resolver
