--- a/esa-tm-model/esa-tm-model.cabal
+++ b/esa-tm-model/esa-tm-model.cabal
@@ -69,7 +69,8 @@ library
 
   -- Other library packages from which modules are imported.
   build-depends:       base ^>=4.12.0.0,
-    esa-base
+    esa-base,
+    rio
 
   -- Directories containing source files.
   hs-source-dirs:      src
@@ -77,14 +78,14 @@ library
   -- Base language which the package is written in.
   default-language:    Haskell2010
 
-  if flag(llvm)   
+  if flag(llvm)
         ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields -fllvm
         -- ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
         --              -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
         --              -funbox-strict-fields -fllvm
-    else
+  else
         ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields
