Updates to TM model

--- a/esa-tm-model/esa-tm-model.cabal
+++ b/esa-tm-model/esa-tm-model.cabal
@@ -60,6 +60,7 @@ library
     Data.TM.Value
     Data.TM.Parameter
     Data.TM.Calibration
+    Data.TM.Validity
 
   -- Modules included in this library but not exported.
   -- other-modules:
