Changed to ShortText to save memory

--- a/esa-mib/esa-mib.cabal
+++ b/esa-mib/esa-mib.cabal
@@ -86,7 +86,8 @@ library
     , directory
     , lens
     , esa-base
-
+    , text-short
+    
   -- Directories containing source files.
   hs-source-dirs:      src
 
