--- a/esa-tm-model/esa-tm-model.cabal
+++ b/esa-tm-model/esa-tm-model.cabal
@@ -71,7 +71,8 @@ library
   -- Other library packages from which modules are imported.
   build-depends:       base ^>=4.12.0.0,
     esa-base,
-    rio
+    rio,
+    text-short
 
   -- Directories containing source files.
   hs-source-dirs:      src
