--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -62,6 +62,11 @@ library
     Data.TM.Value
     Data.TM.Parameter
     Data.TM.Calibration
+    Data.TM.CalibrationTypes
+    Data.TM.NumericalCalibration
+    Data.TM.TextualCalibration
+    Data.TM.PolynomialCalibration
+    Data.TM.LogarithmicCalibration
     Data.TM.Validity
 
   -- Modules included in this library but not exported.
