Added conversion from MIB to model for numerical calibration

--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -90,6 +90,7 @@ library
     , conduit
     , text-short
     , lens
+    , megaparsec
 
   -- Directories containing source files.
   hs-source-dirs:      src
