--- a/esa-mib/esa-mib.cabal
+++ b/esa-mib/esa-mib.cabal
@@ -72,6 +72,7 @@ library
     Data.MIB.TXP
     Data.MIB.MCF
     Data.MIB.LGF
+    Data.Conversion.Calibration
 
   -- Modules included in this library but not exported.
   -- other-modules:
