--- a/esa-tm-model/stack.yaml
+++ b/esa-tm-model/stack.yaml
@@ -30,6 +30,8 @@ resolver: lts-14.4
 #   - wai
 packages:
 - .
+- ../esa-base
+
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
