Further updates to model data structures

--- a/esa-mib/esa-mib.cabal
+++ b/esa-mib/esa-mib.cabal
@@ -101,7 +101,7 @@ library
     , esa-base
     , esa-tm-model
     , text-short
-
+    , transformers
   -- Directories containing source files.
   hs-source-dirs:      src
 
