--- a/esa-tm-model/esa-tm-model.cabal
+++ b/esa-tm-model/esa-tm-model.cabal
@@ -56,10 +56,7 @@ flag llvm
 
 library
   -- Modules exported by the library.
-  exposed-modules:
-    Data.Model.CalibrationDef
-    Data.Model.TMPacket
-    Data.Model.TMParameterDef
+  -- exposed-modules:
 
   -- Modules included in this library but not exported.
   -- other-modules:
