Added more stuff for parameter extraction

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -66,6 +66,7 @@ library
         Data.PUS.TMFrameDfh
         Data.PUS.TMFrameExtractor
         Data.PUS.TMStoreFrame
+        Data.PUS.TMParameterExtraction
         Data.PUS.ExtractedDU
         Data.PUS.MissionSpecific.Definitions
         Data.PUS.Value
