--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -54,6 +54,7 @@ library
   exposed-modules:
     General.Types
     General.Time
+    General.TimeSpan
     General.Chunks
     General.Hexdump
     General.Padding
@@ -94,6 +95,7 @@ library
     , lens
     , megaparsec
     , reinterpret-cast
+    , thyme
 
   -- Directories containing source files.
   hs-source-dirs:      src
