--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -27,6 +27,7 @@ flag bench
         Build benchmarks
     default: False
 
+
 library
     exposed-modules:
         Control.PUS.Classes
@@ -68,6 +69,7 @@ library
         Data.PUS.TMFrameExtractor
         Data.PUS.TMStoreFrame
         Data.PUS.TMParameterExtraction
+        Data.PUS.TMPacket
         Data.PUS.ExtractedDU
         Data.PUS.MissionSpecific.Definitions
         Data.PUS.Value
@@ -82,9 +84,47 @@ library
 
     hs-source-dirs: src
     default-language: Haskell2010
-    other-extensions:
-        OverloadedStrings
+    default-extensions:
+        AutoDeriveTypeable
         BangPatterns
+        BinaryLiterals
+        ConstraintKinds
+        DataKinds
+        DefaultSignatures
+        DeriveDataTypeable
+        DeriveFoldable
+        DeriveFunctor
+        DeriveGeneric
+        DeriveTraversable
+        DoAndIfThenElse
+        EmptyDataDecls
+        ExistentialQuantification
+        FlexibleContexts
+        FlexibleInstances
+        FunctionalDependencies
+        GADTs
+        GeneralizedNewtypeDeriving
+        InstanceSigs
+        KindSignatures
+        LambdaCase
+        MonadFailDesugaring
+        MultiParamTypeClasses
+        MultiWayIf
+        NamedFieldPuns
+        NoImplicitPrelude
+        OverloadedStrings
+        PartialTypeSignatures
+        PatternGuards
+        PolyKinds
+        RankNTypes
+        RecordWildCards
+        ScopedTypeVariables
+        StandaloneDeriving
+        TupleSections
+        TypeFamilies
+        TypeSynonymInstances
+        ViewPatterns
+
     build-depends:
         base
         , bytestring
