Further updates for MIB loading.
Does not work correctly still. Parameters need to be loaded also on import warnings, which is currently not the case.

--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -62,6 +62,7 @@ library
     General.Padding
     General.SetBitField
     General.GetBitField
+    General.TriState
     Data.TM.Value
     Data.TM.Parameter
     Data.TM.Calibration
