Moved MIB, changed some of the loading code. Not compile clean yet.

--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -63,6 +63,7 @@ library
     General.SetBitField
     General.GetBitField
     General.TriState
+    Data.DataModel
     Data.TM.Value
     Data.TM.Parameter
     Data.TM.Calibration
