--- a/esa-mib/esa-mib.cabal
+++ b/esa-mib/esa-mib.cabal
@@ -164,7 +164,7 @@ executable LoadMIBTest
     main-is: LoadMIBTest.hs
     default-language: Haskell2010
     hs-source-dirs: test
-    ghc-options: -Wall -O
+    ghc-options: -Wall -O2 -funbox-strict-fields -rtsopts
     default-extensions:
         AutoDeriveTypeable
         BangPatterns
