Changed to a mutable hash table for parameters

--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -146,6 +146,7 @@ library
     , attoparsec-binary
     , base64-bytestring-type
     , mtl
+    , hashtables
 
   -- Directories containing source files.
   hs-source-dirs:      src
