--- a/esa-mib/esa-mib.cabal
+++ b/esa-mib/esa-mib.cabal
@@ -145,6 +145,7 @@ library
     , esa-base
     , text-short
     , mtl
+    , hashtables
 
   -- Directories containing source files.
   hs-source-dirs:      src
