--- a/auris-tmph/auris-tmph.cabal
+++ b/auris-tmph/auris-tmph.cabal
@@ -34,7 +34,7 @@ flag llvm
     default: False
 
 
-library 
+library
 
   exposed-modules:
     GUI.PUSPacketTable
@@ -48,20 +48,20 @@ library
     rio,
     lens,
     containers,
-    esa-base, 
+    esa-base,
     esa-space-protocols,
     gui-base
 
 
   default-language: Haskell2010
   if flag(llvm)
-    ghc-Options: -O -Wall -Wcompat -Widentities -Wincomplete-record-updates
+    ghc-Options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                       -funbox-strict-fields -threaded -fllvm
   else
-    ghc-Options: -O -Wall -Wcompat -Widentities -Wincomplete-record-updates
+    ghc-Options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-                      -funbox-strict-fields -threaded 
+                      -funbox-strict-fields -threaded
 
   if impl(ghc >= 7.10) && flag(FastCompile)
      ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
