--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -11,7 +11,7 @@ maintainer: michael.oswald@onikudaki.net
 homepage:
 category: UI,Graphics
 cabal-version: >=2.0
-extra-source-files: 
+extra-source-files:
     src/AURISi.fl
 
 
@@ -41,7 +41,7 @@ Executable AURISi
   Other-modules:
     GUI.MainWindow
     GUI.MainWindowCallbacks
-    AurisInterface 
+    AurisInterface
     AurisProcessing
     AurisConfig
     AurisMissionSpecific
@@ -54,7 +54,7 @@ Executable AURISi
     rio,
     lens,
     containers,
-    esa-base, 
+    esa-base,
     esa-space-protocols,
     gui-base,
     auris-tmph,
@@ -71,11 +71,11 @@ Executable AURISi
 
   default-language: Haskell2010
   if flag(llvm)
-    ghc-Options: -O -Wall -Wcompat -Widentities -Wincomplete-record-updates
+    ghc-Options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                       -funbox-strict-fields -threaded -rtsopts -fllvm
   else
-    ghc-Options: -O -Wall -Wcompat -Widentities -Wincomplete-record-updates
+    ghc-Options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                       -funbox-strict-fields -threaded -rtsopts
 
