--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -48,6 +48,11 @@ category:            Data
 -- README.
 extra-source-files:  CHANGELOG.md, README.md
 
+flag llvm
+    description:
+        build library with llvm
+    default: False
+
 
 library
   -- Modules exported by the library.
@@ -154,3 +159,17 @@ library
   -- Base language which the package is written in.
   default-language:    Haskell2010
 
+  if flag(llvm)
+    ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+        -funbox-strict-fields -fllvm
+        -- ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        --              -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+        --              -funbox-strict-fields -fllvm
+  else
+    ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                  -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                  -funbox-strict-fields
+        -- ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        --              -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+        --              -funbox-strict-fields
