--- a/esa-db/esa-db.cabal
+++ b/esa-db/esa-db.cabal
@@ -25,6 +25,13 @@ source-repository head
   type: git
   location: https://github.com/githubuser/esa-db
 
+
+flag llvm
+    description:
+        build library with llvm
+    default: False
+
+
 library
   exposed-modules:
       Persistence.Db
@@ -45,6 +52,16 @@ library
     , text
     , time
   default-language: Haskell2010
+
+  if flag(llvm)
+      ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                    -funbox-strict-fields -fllvm
+  else
+      ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                    -funbox-strict-fields
+
 
 executable esa-db-exe
   main-is: Main.hs
