--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -73,7 +73,7 @@ Executable AURISi
   if flag(llvm)
     ghc-Options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-                      -funbox-strict-fields -threaded -rtsopts -fllvm
+                      -funbox-strict-fields -threaded -rtsopts -fllvm -optlo-O3
   else
     ghc-Options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
