--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -53,6 +53,11 @@ flag llvm
         build library with llvm
     default: False
 
+flag optimize 
+    description: 
+      build library with optimization
+    default: False 
+
 
 library
   -- Modules exported by the library.
@@ -160,16 +165,15 @@ library
   default-language:    Haskell2010
 
   if flag(llvm)
-    ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
-        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-        -funbox-strict-fields -fllvm -optlo-O3
-        -- ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
-        --              -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-        --              -funbox-strict-fields -fllvm
-  else
-    ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
-                  -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-                  -funbox-strict-fields
-        -- ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
-        --              -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-        --              -funbox-strict-fields
+        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields -fllvm -optlo-O3
+  else 
+    if flag(optimize) 
+        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields
+    else 
+        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields
