--- a/esa-db/esa-db.cabal
+++ b/esa-db/esa-db.cabal
@@ -31,6 +31,11 @@ flag llvm
         build library with llvm
     default: False
 
+flag optimize 
+    description: 
+      build library with optimization
+    default: False 
+
 
 library
   exposed-modules:
@@ -54,13 +59,19 @@ library
   default-language: Haskell2010
 
   if flag(llvm)
-      ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
-                    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-                    -funbox-strict-fields -fllvm -optlo-O3
-  else
-      ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
-                    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-                    -funbox-strict-fields
+        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields -fllvm -optlo-O3
+  else 
+    if flag(optimize) 
+        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields
+    else 
+        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields
+
 
 
 executable esa-db-exe
