--- a/esa-tm-model/esa-tm-model.cabal
+++ b/esa-tm-model/esa-tm-model.cabal
@@ -54,6 +54,13 @@ flag llvm
         build library with llvm
     default: False
 
+
+flag optimize 
+    description: 
+      build library with optimization
+    default: False 
+
+
 library
   -- Modules exported by the library.
   -- exposed-modules:
@@ -77,16 +84,15 @@ library
   default-language:    Haskell2010
 
   if flag(llvm)
-        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-                     -funbox-strict-fields -fllvm
-        -- ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
-        --              -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-        --              -funbox-strict-fields -fllvm
-  else
+                     -funbox-strict-fields -fllvm -optlo-O3
+  else 
+    if flag(optimize) 
+        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields
+    else 
         ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields
-        -- ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
-        --              -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-        --              -funbox-strict-fields
