--- a/gui-base/gui-base.cabal
+++ b/gui-base/gui-base.cabal
@@ -53,6 +53,12 @@ flag llvm
         build library with llvm
     default: False
 
+flag optimize 
+    description: 
+      build library with optimization
+    default: False 
+
+
 library
   -- Modules exported by the library.
   exposed-modules:
@@ -79,10 +85,15 @@ library
   default-language:    Haskell2010
 
   if flag(llvm)
-      ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
-                    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-                    -funbox-strict-fields -fllvm -optlo-O3
-  else
-      ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
-                    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-                    -funbox-strict-fields
+        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields -fllvm -optlo-O3
+  else 
+    if flag(optimize) 
+        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields
+    else 
+        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
+                     -funbox-strict-fields
