Added modified hashtables library

--- a/esa-mib/esa-mib.cabal
+++ b/esa-mib/esa-mib.cabal
@@ -230,4 +230,5 @@ executable LoadMIBTest
         unliftio,
         hspec,
         pretty-show,
-        vector
+        vector,
+        hashtables
