--- a/stack.yaml
+++ b/stack.yaml
@@ -38,6 +38,7 @@ packages:
 - gui-base
 - auris-tmph
 - aurisi
+- hashtables
 
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
