--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -73,7 +73,7 @@ library
         Data.PUS.TMStoreFrame
         Data.PUS.TMParameterExtraction
         Data.PUS.TMPacket
-        Data.PUS.TMPacketIdentification
+        Data.PUS.TMPacketProcessing
         Data.PUS.ExtractedDU
         Data.PUS.MissionSpecific.Definitions
         Data.PUS.Value
@@ -173,6 +173,7 @@ library
         , streaming-commons
         , text-short
         , resourcet
+        , hashtables
 
     if flag(llvm)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
