--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -73,6 +73,47 @@ Executable AURISi
 
   Other-Modules: AURISi
 
+  default-extensions:
+        AutoDeriveTypeable
+        BangPatterns
+        BinaryLiterals
+        ConstraintKinds
+        DataKinds
+        DefaultSignatures
+        DeriveDataTypeable
+        DeriveFoldable
+        DeriveFunctor
+        DeriveGeneric
+        DeriveTraversable
+        DoAndIfThenElse
+        EmptyDataDecls
+        ExistentialQuantification
+        FlexibleContexts
+        FlexibleInstances
+        FunctionalDependencies
+        GADTs
+        GeneralizedNewtypeDeriving
+        InstanceSigs
+        KindSignatures
+        LambdaCase
+        MonadFailDesugaring
+        MultiParamTypeClasses
+        MultiWayIf
+        NamedFieldPuns
+        OverloadedStrings
+        PartialTypeSignatures
+        PatternGuards
+        PolyKinds
+        RankNTypes
+        RecordWildCards
+        ScopedTypeVariables
+        StandaloneDeriving
+        TupleSections
+        TypeFamilies
+        TypeSynonymInstances
+        ViewPatterns
+        NumericUnderscores
+
 
   default-language: Haskell2010
   if flag(llvm)
@@ -99,3 +140,19 @@ Executable AURISi
    ghc-Options: "-optl-Wl,-lfltkc"
   if !os(darwin) && !os(windows)
    ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
+
+
+
+
+executable WriteAurisConfig
+    main-is: WriteAurisConfig.hs
+    default-language: Haskell2010
+    hs-source-dirs: src/test
+    ghc-options: -Wall -O
+    build-depends:
+        base,
+        rio,
+        bytestring, 
+        aeson,
+        esa-space-protocols
+
