--- a/aurisi/stack.yaml
+++ b/aurisi/stack.yaml
@@ -2,8 +2,19 @@ flags: {}
 resolver: lts-14.11
 extra-deps:
 - fltkhs-0.8.0.2
+- attoparsec-data-1.0.4.1
+- hw-prim-bits-0.1.0.4
+- attoparsec-time-1
+
+
 allow-newer: true
 packages:
 - .
 - ../auris-tmph
 - ../gui-base
+- ../esa-base 
+- ../esa-space-protocols
+- ../mcs-interface 
+- ../esa-mib
+- ../esa-db
+
