--- a/esa-base/stack.yaml
+++ b/esa-base/stack.yaml
@@ -29,11 +29,15 @@ resolver: lts-14.11
 #   - wai
 packages:
 - .
+
+
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
 #
-# extra-deps:
+extra-deps:
+- ../hashtables
+
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
